--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bfbe58db",
+   "id": "2cb35fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "44b07012",
+   "id": "25866019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "38677a6c",
+   "id": "92f6b879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98e69c2f",
+   "id": "2d5a9e06",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e6424d5",
+   "id": "5736847c",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7ceb0de2",
+   "id": "d2612fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e6b6512a",
+   "id": "a6b74f11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "118b0468",
+   "id": "9abefcf5",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9d53afeb",
+   "id": "bf6f2bd4",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9dfe4cb3",
+   "id": "6a377b5b",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1d08ec73",
+   "id": "4b15fde5",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "79dd93fe",
+   "id": "31c9717b",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "53698088",
+   "id": "f998c52f",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "64c3400c",
+   "id": "a5346e99",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cd989d54",
+   "id": "4653ef95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1ddc5f4d",
+   "id": "4629cda5",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fdb1f7ce",
+   "id": "6f87e1a3",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d1dddac3",
+   "id": "38888bd4",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3bdfc472",
+   "id": "b68106e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "acf9cd9d",
+   "id": "de79f18c",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "be92e6bd",
+   "id": "99e6d768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "072d1f21",
+   "id": "cd2ec0ab",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a4ffd408",
+   "id": "e509ed52",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a313514c",
+   "id": "bf80bd5f",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4ecfd36c",
+   "id": "07701114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "41aca717",
+   "id": "9ef97ddf",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7109b6c3",
+   "id": "e76e14ed",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7863a54b",
+   "id": "5fb460df",
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b4c647bb",
+   "id": "376e2a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c24fce86",
+   "id": "eb410ae1",
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4d49d133",
+   "id": "73cdf776",
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "83903ef9",
+   "id": "28ee4166",
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4c4a87d0",
+   "id": "2fe7861a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c0179845",
+   "id": "e0fafcb3",
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5f04359e",
+   "id": "1485e479",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "87e3824c",
+   "id": "c2bb31a1",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "03304849",
+   "id": "73b472c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "86241255",
+   "id": "356519b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8c1f9988",
+   "id": "0e9ca081",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ea0f11b8",
+   "id": "70afb7bb",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4a7024f6",
+   "id": "24b7c3cb",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2f075587",
+   "id": "9b6b232a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,8 +1490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "8623e7f8",
+   "execution_count": 70,
+   "id": "e78ffb87",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
     "plt.text(42, 35, \"Note: Circle size correlates with driver count per city.\", fontsize=\"12\")\n",
     "\n",
     "# Save the figure.\n",
-    "plt.savefig('analysis/Figi.png', bbox_inches='tight')\n",
+    "plt.savefig('analysis/Fig1.png', bbox_inches='tight')\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
@@ -1556,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cec73315",
+   "id": "93063d27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d09fef8",
+   "id": "f66382b9",
    "metadata": {},
    "outputs": [],
    "source": []
