--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -1033,7 +1033,7 @@
     }
    ],
    "source": [
-    "# Create the Urban city DataFrame.\n",
+    "# Create the rural city DataFrame.\n",
     "rural_cities_df = pyber_data_df[pyber_data_df[\"type\"] == \"Rural\"]\n",
     "rural_cities_df.head()\n"
    ]
@@ -2122,7 +2122,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e33418e9",
+   "id": "37f7abdd",
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ecbbeb43",
+   "id": "d1185a6c",
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3c22204b",
+   "id": "bc5baa63",
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6f512067",
+   "id": "2d972531",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "d15ab3d5",
+   "id": "c20ed984",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f9c9fcb2",
+   "id": "969a974f",
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "664ebec7",
+   "id": "9f8d6596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2e800f4a",
+   "id": "d5a431c6",
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "737f0122",
+   "id": "af66be03",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0c27263b",
+   "id": "2fe3d417",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5b46470a",
+   "id": "88e5905f",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "e9aede48",
+   "id": "1d619a01",
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b940cf32",
+   "id": "d98d6d0d",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6bc85c8f",
+   "id": "e054385f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2478,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ab6782f8",
+   "id": "49e915a6",
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2511,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c5610d7b",
+   "id": "94a716ab",
    "metadata": {},
    "outputs": [
     {
@@ -2543,7 +2543,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3c5df782",
+   "id": "19db370c",
    "metadata": {},
    "outputs": [
     {
@@ -2575,7 +2575,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "28feb609",
+   "id": "c0b4185f",
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "35a70247",
+   "id": "d0f1e746",
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "dafd5767",
+   "id": "dd4e512f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2641,7 +2641,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9342074e",
+   "id": "10172070",
    "metadata": {},
    "outputs": [
     {
@@ -2700,7 +2700,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "99be2912",
+   "id": "dceac154",
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "1947c290",
+   "id": "57bc2ba0",
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2818,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "30c5ee85",
+   "id": "e80d726a",
    "metadata": {},
    "outputs": [
     {
@@ -2853,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "f4ddf259",
+   "id": "ce9c6a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2863,7 +2863,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "fc4fe1a8",
+   "id": "959fddbd",
    "metadata": {},
    "outputs": [
     {
@@ -2922,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "8a2606bd",
+   "id": "d7095299",
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "3a807239",
+   "id": "611f218b",
    "metadata": {},
    "outputs": [
     {
@@ -3040,7 +3040,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "27659d2e",
+   "id": "12489abf",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "0c4fe529",
+   "id": "4df204a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3085,7 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "ec612a14",
+   "id": "b5f848d7",
    "metadata": {},
    "outputs": [
     {
@@ -3112,7 +3112,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "833939f0",
+   "id": "2a6b8e16",
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3135,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "91c7308c",
+   "id": "b1a7f879",
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3162,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "2fb409ea",
+   "id": "3691dadc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3172,7 +3172,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "64037ea3",
+   "id": "91e4c4bb",
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3203,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "7b2de480",
+   "id": "19e51c69",
    "metadata": {},
    "outputs": [
     {
@@ -3240,7 +3240,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "00e9e6a5",
+   "id": "c80f7542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3250,7 +3250,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "5e58082f",
+   "id": "ea9204ad",
    "metadata": {},
    "outputs": [
     {
@@ -3277,7 +3277,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "b193019c",
+   "id": "f786dfc4",
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3312,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "82e17ac4",
+   "id": "219c6b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3322,7 +3322,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "202ccef8",
+   "id": "1ffaed4c",
    "metadata": {},
    "outputs": [
     {
@@ -3349,7 +3349,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "bf8f4fbe",
+   "id": "51544855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3359,7 +3359,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "cc37312a",
+   "id": "c6409ff3",
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a6fb5b",
+   "id": "c433a07a",
    "metadata": {},
    "outputs": [],
    "source": []
